# mo-stock-selection

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 20260426_theme_lhb_v21.py  20260430_strategy_swing_phase0.py  f55e185ad212_sync_comments_and_types.py
config/: settings.py  weights.yaml  weights_swing.yaml
data/reports/swing/: 2026-04-30.json  2026-04-30.md
docs/: architecture.md  audit-2026-04-26.md  audit-computation-logic-2026-04-29.md  audit-sector-concentration-2026-04-28.md  cli.md  schema.md  scoring.md  sentiment-integration-design.md  swing-strategy-plan-revised-2026-04-30.md  swing-strategy-report-plan-2026-04-30.md  tushare-interface-check.md  两种主力资金统计口径对比 & 实战选用指南（详细版）.md  板块集中度治理：三重保障机制.md
docs/plans/: 2026-05-04-data-insight-frontend.md
docs/superpowers/plans/: 2026-04-23-gtht-client.md  2026-04-26-ai-layer-integration.md  2026-04-26-theme-lhb-integration.md  2026-05-02-web-frontend.md
docs/superpowers/specs/: 2026-04-23-gtht-client-design.md  2026-05-02-web-frontend-design.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  auth.ts  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/components/: AiSummary.vue  DimensionBar.vue  MarketOverview.vue  (+1 more)
scripts/: deploy_web.sh
src/mo_stock/: __init__.py  analyzer.py  cli.py
tests/: conftest.py  test_ai_swing_prompt.py  test_web_data.py  test_web_health.py  test_web_integration.py  test_web_report_detail.py  test_web_reports.py  test_web_schemas.py  test_web_stock_detail.py  test_web_tasks.py
tests/integration/: test_combine_sector_cap.py  test_end_to_end_sqlite.py
tests/unit/: test_ai_analyzer.py  test_ai_client.py  test_ai_prompts.py  test_ai_schemas.py  test_analyzer.py  test_calendar.py  test_gtht_agent.py  test_gtht_client.py  test_ingest_daily.py  test_lhb_filter.py  test_lhb_seat.py  test_limit_filter.py  test_moneyflow_filter.py  test_render_md.py  test_repo_upsert.py  test_scheduler_lhb_timing.py  test_scorer_combine.py  test_scorer_final_score.py  test_sector_filter.py  test_swing_backtest.py  test_swing_phase1.py  test_theme_filter.py  test_theme_ingest.py  test_tushare_client.py
(+87 files in other folders)
